Aufgabe 5... ALLES ERLEDIGT

--- a/Aufgabe5Dokumentation.tex
+++ b/Aufgabe5Dokumentation.tex
@@ -443,4 +443,6 @@ Da ich die Dateien aus einem .txt File gelesen habe, sollte ich auch das Antwort
     output))
 \end{minted}        
 
+\textbf{Das ganzes Quellcode } kann man unter das GitHub Repository \textit{BundeswettbewerbInformatik} von dem User \textit{steve0el0crack} finden.
+
 \end{document}
